--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,41 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Press Start 2P', cursive;
     margin: 0;
+    font-family: 'Press Start 2P', cursive;
     padding: 0;
-}
-
-audio,
-embed {
-    position: absolute;
-    z-index: -9999;
+    box-sizing: border-box;
 }
 
 body {
     background: radial-gradient(rgb(206, 206, 206), rgb(235, 235, 235));
 }
-#canvas1 {
-    display: block;
-    border: 10px solid white
+audio,
+embed {
+    position: absolute;
+    z-index: -9999;
 }
-@media (max-width: 1044px) {
-    canvas {
-        display: block;
-        width: 100vw;
-        height: 100vh;
-        border: 10px solid white;
-        margin: 0 auto;
-    }
+#baseDiv {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    height: 100vh;
+    max-width: 1277px; 
+    max-height: 576; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
-@media (min-width: 1044px) {
-    #baseDiv {
-        position: absolute;
-        display: inline-block;
-        width: 1024px;
-        height: 576px;
-        top: 50%;
-        right: 50%;
-        margin-top: -512px;
-        margin-right: -512px;
-    }
+#canvas1 {
+    width: 100%; 
+    height: 100%; 
+    border: 5px solid white;
+    max-width: 100%;
+    max-height: 100%;
 }
+
 #displayText {
     position: absolute; color: white; align-items: center; justify-content: center; top: 0; bottom: 0; left: 0; right:0; display: none
 }
@@ -57,10 +53,13 @@ footer p {
     font-size: 8px;
 }
 
-#health_bars {
+#healthBars {
     position: absolute;
     display: none;
-    width: 100%;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     align-items: center;
     padding: 20px;
 }
@@ -91,8 +90,10 @@ footer p {
 #timer {
     background-color: black; height: 60px; width: 80px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; color: white;border: 4px solid white;
 }
+
+
 .startBtns {
-    display:none; position: absolute; left: 42%; color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;
+    display:none; position: absolute; color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;
 }
 #start_pve_btn {
     top: 78%;
@@ -126,6 +127,7 @@ footer p a:hover {
 }
 
 #leftArrow {
+    display: none;
     left: 20px;
     border-width: 45px 70px 45px 0;
     border-color: transparent rgba(255, 255, 255, 0.5) transparent transparent;
@@ -133,6 +135,7 @@ footer p a:hover {
 }
 
 #rightArrow {
+    display: none;
     left: 120px;
     border-width: 45px 0 45px 70px;
     border-color: transparent transparent transparent rgba(255, 255, 255, 0.5);
