initial hp bar commit

--- a/css/style.css
+++ b/css/style.css
@@ -53,26 +53,6 @@ footer p {
     font-size: 8px;
 }
 
-#healthBars {
-    position: absolute;
-    display: none;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    align-items: center;
-    padding: 20px;
-}
-
-.missingHealth {
-    background-color: red; height: 40px; width: 100%;
-}
-.health {
-    position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0;
-}
-.healthBar {
-    position: relative; width: 100%; border: 4px solid white; 
-}
 .mana {
     position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; width: 100%;
 }
@@ -173,4 +153,69 @@ footer p a:hover {
 }
 #soundSvg {
     width: 3%; height: 6%; position: absolute;bottom: 3%; right: 1.2%;
+}
+
+#healthBars {
+    position: absolute;
+    display: flex;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    align-items: center;
+    padding: 20px;
+}
+
+.missingHealth {
+    background-color: red; height: 40px; width: 100%;
+}
+.health {
+    position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0;
+}
+.healthBar {
+    position: relative; width: 100%; border: 4px solid white; 
+}
+
+.life-bar {
+    display:flex;
+    top: 10%;
+    left: 50%;
+    height: 40px; width: 100%;
+    transform: translate(-50%, -50%);
+    height: 50px;
+    background-color:#eee;
+    position:absolute;
+    overflow: hidden;
+    display:flex;
+    align-items:center;
+    justify-content: flex-start;
+
+    
+  .actual {
+    content : '';
+    height:100%;
+    width:100%;
+    background-color: #b71c1c;
+    z-index:10;
+    transform-origin: center left;
+    transition: all 0s ease;
+  }
+  
+  .lost {
+    content : '';
+    height:100%;
+    position:absolute;
+    left:0;
+    top:0;
+    background-color: #d32f2f;
+    transform-origin: center left;
+    width:0;
+  }    
+    
+    .lost.active {
+      animation-duration: 2s;
+      animation-name: loseLife;    
+      animation-iteration-count: 1;
+    }
+    
 }
