--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ embed {
 .healthBar {
     position: relative;
     width: 100%;
-    border: 4px solid #ffab00;
+    border: 3px solid #ffab00;
 }
 
 .mana {
@@ -97,6 +97,8 @@ embed {
     top: 50;
     left: 0%;
     left: 0%;
+    color: #ffab00;
+    text-shadow: 2px 2px 0px #30263d;
 }
 
 .score1 {
@@ -250,7 +252,7 @@ footer p a:hover {
     display: flex;
     width: 100%;
     height: 40px;
-    background-color: rgba(56, 56, 56, 0.5);
+    background-color: #f42127;
     position: relative;
     overflow: hidden;
     display: flex;
@@ -262,7 +264,7 @@ footer p a:hover {
         content: '';
         height: 100%;
         width: 100%;
-        background-color: #b71c1c;
+        background-color: #fff94f;
         z-index: 10;
         transform-origin: center left;
         transition: all 0s ease;
@@ -274,7 +276,7 @@ footer p a:hover {
         position: absolute;
         left: 0;
         top: 0;
-        background-color: #d32f2f;
+        background-color: #ac0208;
         transform-origin: center left;
         width: 0;
     }
